--- a/README
+++ b/README
@@ -10,4 +10,5 @@ Sketch of a social network for occupy wallstreet / everywhere sponsorship and ad
 Thus, Lauren Slowik and Matthew Wilse proposed OccuDopt, a social network for #OWS that would bind occupiers with patrons.
 
 Navit and Brian are also in the house.
+Stephanie and Amira are here too! 
 
