modified README file

--- a/README
+++ b/README
@@ -12,3 +12,4 @@ Thus, Lauren Slowik and Matthew Wilse proposed OccuDopt, a social network for #O
 Navit and Brian are also in the house.
 Stephanie and Amira are here too! 
 
+Anthony is here to!!!
